# griptape-nodes-library-opencolorio

./: .gitignore  Makefile  README.md  griptape-nodes-library.json  griptape_nodes_library.json  pyproject.toml
.github/workflows/: ci.yml
griptape_nodes_library/exr/: exr.py
griptape_nodes_opencolorio/: __init__.py
griptape_nodes_opencolorio/exr/: __init__.py  display_exr_part.py  exr.py  exr_file_artifact.py  exr_layer_artifact.py  exr_part_artifact.py  exr_preview_generator.py  load_exr.py
opencolorio/: advanced_library.py  griptape-nodes-library.json  ocio_helpers.py
opencolorio/artifacts/: ocio_color_params_artifact.py  ocio_config_artifact.py
opencolorio/nodes/analysis/: colorspace_analysis.py
opencolorio/nodes/config/: load_ocio_config.py  ocio_color_parameters.py
opencolorio/nodes/io/: __init__.py  exr_loader.py
opencolorio/nodes/transform/: colorspace_transform.py
opencolorio/services/: colorspace_transform.py
tests/: conftest.py
tests/unit/: test_advanced_library.py  test_colorspace_transform_service.py  test_load_ocio_config.py  test_ocio_color_parameters.py  test_ocio_color_params_artifact.py  test_ocio_config_artifact.py
