[project]
name = "griptape-nodes-library-opencolorio"
version = "0.1.0"
description = "OpenColorIO (OCIO) Griptape Node Library for professional color management"
authors = [
    {name = "Griptape Community", email = "support@griptape.ai"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
    "PyOpenColorIO>=2.3.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "imageio[pyexr]>=2.31.0",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
